# amethyst-hello

./: .gitignore  Cargo.toml  README.md
assets/prefabs/: ball.ron  paddle.ron
assets/ui/: fps.ron  loading.ron  menu.ron  paused.ron
etc/: controller_input.ron  display.ron  keyboard_input.ron
src/: audio.rs  gamedata.rs  input.rs  main.rs  utils.rs
src/bundles/: engine.rs  game.rs  menu.rs  mod.rs
src/components/: ball.rs  bounds.rs  mod.rs  paddle.rs  physical.rs
src/prefabs/: ball.rs  mod.rs  paddle.rs
src/states/: game.rs  loading.rs  menu.rs  mod.rs  pause.rs
src/systems/: ball.rs  debug.rs  game.rs  mod.rs  paddle.rs  physical.rs
