[package]
name = "amethyst-hello"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "amethyst-hello"
path = "src/main.rs"

[dependencies]
amethyst = { version = "0.15", features = ["vulkan"] }
amethyst-imgui = "0.6"
derivative = "2.0"
log = "0.4"
serde = "1.0"

[profile.release.build-override]
opt-level = 0
